--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,15 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css">
+    <!-- Font awsome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section id="home" class="">
@@ -20,7 +28,9 @@
       >
         <!-- As a heading -->
         <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1">Navbar</span>
+          <span class="navbar-brand mb-0 h1"
+            ><span id="red">port</span>Folio</span
+          >
         </div>
 
         <div class="container-fluid">
@@ -41,7 +51,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#achievements">Achievements</a>
+                <a class="nav-link" href="#projects">Projects</a>
               </li>
 
               <li class="nav-item">
@@ -51,34 +61,181 @@
           </div>
         </div>
       </nav>
-      <h1>home</h1>
+      <div class="container1">
+        <h1>Balachandregowda P</h1>
+        <p>Student || Open-sourse Enthusiast</p>
+        <div class="letter-typing">
+          <h2>
+            <a
+              href=""
+              class="typewrite"
+              data-period="2000"
+              data-type='[ "Student @ Presidency University" ]'
+            >
+              <span class="wrap"></span>
+            </a>
+          </h2>
+        </div>
+      </div>
     </section>
 
     <section id="education">
-      <h1>Education</h1>
+      <h1 class="text-white pt-3 text-center">Education</h1>
+      <div class="container">
+        <div class="card bg-dark text-white">
+          <div class="card-body">
+            <h2 class="text-danger">School</h2>
+            <h5>Sri Adichunchanagiri High School</h5>
+            <p>Heggadadevana Kote</p>
+          </div>
+        </div>
+
+        <div class="row justify-content-end">
+          <div class="card bg-dark text-white text-end">
+            <div class="card-body">
+              <h2 class="text-danger">Pre-University</h2>
+              <h5>Vivekananda Pre-University Collage</h5>
+              <p>Putturu, D K</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card bg-dark text-white">
+          <div class="card-body">
+            <h2 class="text-danger">Graduation</h2>
+            <h5>Presidency University</h5>
+            <p>Yalahanka, Bengaluru</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section id="skills">
-      <h1>Skills</h1>
+      <h1 class="text-white pt-3" style="margin-left: 7%">Skills</h1>
+      <div class="container" style="height: 90%">
+        <div class="row align-items-center" style="height: 90%">
+          <div class="row justify-content-around">
+            <div class="card text-white bg-dark mb-3 skill">
+              <div class="card-header">
+                <h5 style="color: yellow">Front-end</h5>
+              </div>
+              <div class="card-body">
+                <h6>• HTML</h6>
+                <h6>• CSS</h6>
+                <h6>• Java Script</h6>
+                <h6>• Type Script</h6>
+              </div>
+            </div>
+
+            <div class="card text-white bg-dark mb-3 skill">
+              <div class="card-header">
+                <h5 style="color: yellow">Back-end</h5>
+              </div>
+              <div class="card-body">
+                <div class="card-body">
+                  <h6>• Node Js</h6>
+                  <h6>• Express Js</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row justify-content-around">
+            <div class="card text-white bg-dark mb-3 skill">
+              <div class="card-header">
+                <h5 style="color: yellow">Frame-works</h5>
+              </div>
+              <div class="card-body">
+                <div class="card-body">
+                  <h6>• Angular Js</h6>
+                  <h6>• React Js</h6>
+                </div>
+              </div>
+            </div>
+
+            <div class="card text-white bg-dark mb-3 skill">
+              <div class="card-header">
+                <h5 style="color: yellow">Version-Control</h5>
+              </div>
+              <div class="card-body">
+                <div class="card-body">
+                  <h6>• Git</h6>
+                  <h6>• GitHub</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <section id="achievements">
-      <h1>Achievements</h1>
+    <section id="projects">
+      <h1 class="text-white pt-3" style="margin-left: 7%">Projects</h1>
+      <div class="container" style="height: 90%">
+        <div
+          class="row align-items-center justify-content-around"
+          style="height: 90%"
+        >
+          <div class="card bg-dark text-white" style="width: 18rem">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJ2Oq-RoDmeZ-WyiDa37o8Tk0WjNoUxAJwC_lLECyX9cXi4vw5lYdXpO0wJma_uuYVsIY&usqp=CAU"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h6 style="color: yellow">Portfolio</h6>
+              <p class="card-text">
+                Personal website designed using Angular frame work and
+                self-contact details.
+              </p>
+            </div>
+          </div>
+
+          <div class="card bg-dark text-white" style="width: 18rem">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSOBYu5-eppsggmMMIGfkDRYIFSlDa0CqdFYKW9zjms1yG_ghLb6pPLFKP3ps0rlkB5qM&usqp=CAU"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h6 style="color: yellow">Todo-List</h6>
+              <p class="card-text">
+                todo list app designed with the Angular frame work with
+                Authentication.
+              </p>
+            </div>
+          </div>
+
+          <div class="card text-white bg-dark" style="width: 18rem">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlDHw3ppVNsxLB5rlCxc46M3AlbGEWrSKn2w&usqp=CAU"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h6 style="color: yellow">Weather-App</h6>
+              <p class="card-text">
+                Weather app to search the weather condition of All cities.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section id="contact">
       <h1>Contact</h1>
 
       <div class="Social-media mt-3">
-        <a href="#" class="icon"><font color="#007cc4"><i class="fab fa-facebook"></i></font></a>
-        <a href="#" class="icon"><font color="#007cc4"><i class="fab fa-linkedin"></i></font></a>
-        <a href="#" class="icon"><font color="#007cc4"><i class="fab fa-instagram"></i></font></a>
-        <a href="#" class="icon"><font color="#007cc4"><i class="fab fa-youtube"></i></a></font>
+        <a href="#" class="icon"><i class="fa-brands fa-instagram"></i> </a>
+        <a href="#" class="icon"><i class="fa-solid fa-envelope"></i></a>
+        <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+        <a href="#" class="icon"><i class="fa-brands fa-twitter"></i></a>
       </div>
 
-      <p style="color: red;">balachandregowda &copy; 2023 All rights reserved</p>
-
+      <p style="color: red">balachandregowda &copy; 2023 All rights reserved</p>
     </section>
+    <script src="script.js"></script>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
